# gin-htmx-experiment

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml  test.db
commons/db/: pagination.go
commons/md/: markdown.go
db/: connection.go  db.go  model.go
note/: handler.go  model.go  router.go  schema.go  service.go
note/statics/: app.js  style.css
note/templates/: create.html  header.html  index.html  notes.html  search.html
note_api/: main.py
note_api/note/: __init__.py  router.py  schema.py
note_api/shared/: database.py  settings.py
src/api/: main.py
src/api/note/: __init__.py  router.py  schema.py
src/api/shared/: database.py  settings.py
