[tool.poetry]
name = "note-api"
version = "0.1.0"
description = ""
authors = ["TheBigRoomXXL <seb.lovergne@gmail.com>"]
readme = "README.md"
packages = [{include = "note_api"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0" 
fastapi = "^0.97.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"